--- a/doc/D53/D53.tex
+++ b/doc/D53/D53.tex
@@ -74,10 +74,10 @@
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \title{D5.3\\ Technical specification of the robot set-up and of the communication infrastructure}
-\author{Luca Iocchi, Maria Teresa L\'azaro, Cristiano Gennari}
+\author{Maria Teresa L\'azaro, Cristiano Gennari, Roberto Tino, Giorgio Grisetti, Luca Iocchi}
 
 
-\date{Draft 0.1 - ... }
+\date{1.0 - September 30, 2015 }
 
 \begin{document}
 \includegraphics[height=2cm]{../fig/logoSapienza.png}
@@ -86,7 +86,7 @@
 
 \vspace*{1cm}
 \begin{abstract}
-This document describes the activities carried out within Task 5.3 concerning the design and the hardware configuration of the robots that will be used in the project. It includes description of the different devices that will be mounted on the robots, of the computational units, and of the connections and data communication among them.
+This document describes the activities carried out within Task 5.3 concerning the design and the hardware configuration of the robots that will be used in the project. It includes descriptions of the different devices that will be mounted on the robots, of the computational units, and of the connections and data communication among them.
 \end{abstract}
 
 \vspace*{2cm}
@@ -107,5 +107,8 @@ The copyright in this document is the property of the COACHES Consortium. This d
 \input{D53_comm}
 
 \input{D53_design}
+
+\bibliographystyle{plain}
+\bibliography{D53}
 
 \end{document}
