--- a/doc/D53/D53_design.tex
+++ b/doc/D53/D53_design.tex
@@ -8,7 +8,7 @@ with Dept. of Computer, Control and Management Engineering Sapienza University o
 The designed robot model has been called ALFRED and the main design concept has been developed for the need of deploying a social robot in public environments (such as, shopping malls) with the purpose of assisting people that need for help or
 information, guiding them to a certain location, etc.
 
-The main results of the design are reported in the following of this section.
+The main results of this design effort are reported in the following of this section.
 
 
 \subsection{Motivation and design goals}
@@ -39,15 +39,13 @@ that aims at developing autonomous social robots operating in a shopping mall in
 performing short-term interactions with shop-keepers and customers of the mall.
 Moreover, given the actual goal of fully producing two of these robots to be deployed in a real shopping
 mall, architectural and functional limits derived by limited budget have been carefully considered.
-The two robots are under development from Algorithmica S.r.l.\footnote{http://algorithmica.it} company and they are expected to be delivered in Fall 2015.
 
 \subsection{Design concepts}
 
 ALFRED is a social robot designed to operate in public environments populated by many non-expert users.
 Its main purpose is to assist people that ask for help or information, need to be guided to a certain
 location, as well as to advertise items and goods as provided by shop-keepers.
-As being in front of something that looks human but is not human can instill dread to the user, we chose not
-to use an anthropomorphic shape for the robot.
+As being in front of something that looks human but it is not human can instill dread to the user, and given recent studies and our past experiences in similar applications, we chose not to use an anthropomorphic shape for the robot.
 
 However, size and shape of the robot resemble those of a human. In this way we expect the robot to suggest
 natural human-like interactions (such as, using speech or gestures). The structure is erect and curved ahead to
@@ -64,23 +62,29 @@ triangles, the surfaces are smooth and accommodating without corners or sharp ed
 The result of the design is illustrated in the following figures.
 
 \begin{center}
-\includegraphics[height=10cm]{fig/Tavola01.jpg}
-\includegraphics[height=10cm]{fig/Tavola02.jpg}
-\includegraphics[height=10cm]{fig/Tavola03.jpg}
-\includegraphics[height=10cm]{fig/Tavola04.jpg}
+\includegraphics[height=10cm]{fig/Tavola01.jpg}\\ \vspace{0.5cm}
+\includegraphics[height=10cm]{fig/Tavola02.jpg}\\ \vspace{0.5cm}
+\includegraphics[height=10cm]{fig/Tavola03.jpg}\\ \vspace{0.5cm}
+\includegraphics[height=10cm]{fig/Tavola04.jpg}\\
 \end{center}
 
 
 \subsection{Realization}
 
-The robot is built using a Segway robotic base RMP-210 and it is composed by a central carbon structure
+As described in Section 1, the robot is built using a Segway robotic base RMP-210 and it is composed by a central carbon structure
 obtained from flat plates that are later dovetailed and glued with each other.
 The robot lower casing is designed to host a laptop, two laser sensors and all the electronic needed to control
-the robot, while the top partis a sort of backbone that housestwo or three RGBD sensors, a camera, a tablet,
+the robot, while the top part is a sort of backbone that houses two or three RGBD sensors, a camera, a tablet,
 two audio speakers, the microphone and a tray where to place small objects.
 External hulls are arranged upon the main structure with the purpose of protecting the components and to
 give a pleasant look. The hulls are made of a composite material, laminated on mold previously created.
-Finally, the two parts of the robot are easy to disassemblefor transportation.
+Finally, the two parts of the robot are easy to disassemble for transportation.
+
+%More information about the design of ALFRED and videos showing building a scaled model are available in 
+% www.???... TODO!!!
+
+From preliminary evaluation by users, the robots look very nice and appears to be very adequate for the scope. A full extensive evaluation will be done during the project. The robot will be also evaluated within the Robot Design Competition at the International Conference on Social Robotics (ICSR) in Paris on October 26-29, 2015. 
+
 
 
 
