Added new actions in GUI

--- a/doc/D53/D53_robots.tex
+++ b/doc/D53/D53_robots.tex
@@ -7,7 +7,7 @@ The robots are under development by Algorithmica company\footnote{www.algorithmi
 
 \section{Robot Hardware Set-up}
 
-The design of the COACHES robots has been carried out considering the requirements of the project, the environment in which they will operate, and the definition of the use cases, as dewscribed in Deliverable D5.2 ``Definition of the use cases for the demonstrations''.
+The design of the COACHES robots has been carried out considering the requirements of the project, the environment in which they will operate, and the definition of the use cases, as described in Deliverable D5.2 ``Definition of the use cases for the demonstrations''.
 Moreover, the proposed solution is based on the experience gained in building and using DIAGO robot\footnote{https://sites.google.com/a/dis.uniroma1.it/diago} at Sapienza University.
 
 In this section, we report the main hardware components of the robot and their connections.
@@ -91,7 +91,7 @@ Their specifications are summarized in the following table:
 and Depth sensor that will be used for user gesture recognition,
 people detection and tracking or detection of obstacles not visible by
 the laser range finders. 
-The ASUS Xtion camera is show in Figure \ref{fig:cameras} left and its technical specifications are summarized in Table \ref{tab:xtion}.
+The ASUS Xtion camera is shown in Figure \ref{fig:cameras} left and its technical specifications are summarized in Table \ref{tab:xtion}.
 The three cameras will be arranged (as also shown in Section 3) as follows:
 one in the top front looking toward the person who is interacting with the robot,
 one on the bottom front looking at the ground in front of the robot, one in the back looking at people following the robot.
@@ -99,7 +99,7 @@ A first version of the robot may contain only two of these devices.
 
 Additionally, a Logitech HD Pro Webcam C920 is intended to be used for
 robot localization in a later stage.
-The camera is show in Figure \ref{fig:cameras} right and its technical specifications are summarized in Table \ref{tab:logitech}.
+The camera is shown in Figure \ref{fig:cameras} right and its technical specifications are summarized in Table \ref{tab:logitech}.
 The camera will point to the ceiling
 to take advantage of the special pattern (see Fig. \ref{fig:ceiling}) present in
 the Rives de l'Orne mall, where the project demonstrations will be
@@ -131,11 +131,11 @@ Finally, the front camera embedded in the tablet (described below) may be used f
 & \bf{ASUS Xtion pro Live} \\
 \hline \bf{ Power Consumption } & Below 2.5W \\
 \hline \bf{ Distance of Use } & Between 0.8m and 3.5m \\
-\hline \bf{ Field of View } & 58° H, 45° V, 70° D (Horizontal, Vertical, Diagonal) \\
+\hline \bf{ Field of View } & 58$^{\circ}$ H, 45$^{\circ}$ V, 70$^{\circ}$ D (Horizontal, Vertical, Diagonal) \\
 \hline \multirow{2}{*}{\bf{ Depth Image Size }} 
 & VGA (640x480) : 30 fps\\
 & QVGA (320x240): 60 fps \\
-\hline \bf{ Resolution } & SXGA (1280*1024)  \\
+\hline \bf{ Resolution } & SXGA (1280 x 1024)  \\
 \hline \bf{ Interface } & USB 2.0 (USB 3.0 Ready) \\
 \hline \bf{ Dimensions } & 18 cm x 3.5 cm x 5 cm \\
 \hline
@@ -169,7 +169,7 @@ Finally, the front camera embedded in the tablet (described below) may be used f
 \subsubsection{Human-Robot Interfaces}
 Interaction with the user will be mainly through a Graphical User
 Interface (GUI) displayed on a tablet Microsoft Surface Pro 2.
-Tecnical specification of the tablet are described in Table \ref{tab:surface}.
+Technical specification of the tablet are described in Table \ref{tab:surface}.
 
 Although this tablet already incorporates stereo speakers and a
 microphone, additional built-in speakers are mounted on the robot
